fix(layout): partially fix layout issues with Navbar and Sidebar
- Fixed layout for Navbar and Sidebar to work correctly on desktop.
- Footer positioning issue still needs to be resolved.
- To be addressed in a future commit.

--- a/src/pages/Layout/Layout.module.sass
+++ b/src/pages/Layout/Layout.module.sass
@@ -1,16 +1,26 @@
 .Layout
-    .main
-        position: fixed
-        right: 0
+    display: flex
+    flex-direction: column
+    height: 100vh
 
-        overflow-y: auto
+.content
+    display: flex
+    flex: 1
 
-        @media (max-width: 576px)
-            padding: 0
+.main
+    position: relative
 
-        @media (min-width: 768px)and (max-width: 1023px)
-            top: 100px
+    flex: 1
+    padding: 1rem
 
-        @media (min-width: 1024px)
-            width: calc(100% - 256px)
-            height: calc(100% - 64px)
+    overflow-y: auto
+
+    @media (max-width: 576px)
+        padding: 0
+
+    @media (min-width: 768px)and (max-width: 1023px)
+        top: 100px
+
+    @media (min-width: 1024px)
+        width: calc(100% - 256px)
+        height: calc(100% - 64px)
